--- a/.github/workflows/build_kernel_mix2s_pe_a13.yml
+++ b/.github/workflows/build_kernel_mix2s_pe_a13.yml
@@ -11,8 +11,8 @@ env:
   HOOK_METHOD: "normal" # manual hook method,can choice vfs and normal.
   PROFILE_NAME: "polaris_pe_a13.env" # your profile name.
   KERNELSU_SUS_PATCH: "false" # if u need manual susfs patch to kernelsu.
-  KPM_ENABLE: "false" # Only use it for SukiSU-Ultra.
-  KPM_PATCH_SOURCE: "" # patch exec file source -> raw.githubusercontent.com/Test/Test/patch .
+  KPM_ENABLE: "true" # Only use it for SukiSU-Ultra.
+  KPM_PATCH_SOURCE: "ShirkNeko/SukiSU_KernelPatch_patch" # patch exec file source -> raw.githubusercontent.com/Test/Test/patch .
   GENERATE_DTB: "false" # if u kernel need DTB , but cannot auto generate it. (Only Anykernel3).
   GENERATE_CHIP: "qcom" # only supported for qcom and mediatek.
   BUILD_DEBUGGER: "false" # Output build errors.
